2020-01-27  Johnny A. Solbu <johnny@solbu.net>

	* Release version 1.0.2
	* Patch from Matías Fonzo:
	  - Use standard (uint) types
	    Non-standard types have been reported while attempting to compile
	    under the Musl C library; this patch resolves those warnings that
	    end in error.
	  - Check if the rresvport function is available
	* Various compiler fixes from Juergen Perlinger

2018-11-01  Johnny A. Solbu <johnny@solbu.net>

	* Release version 1.0.0

2018-10-28  Johnny A. Solbu <johnny@solbu.net>

	* Rename logo.jpg > hldig.jpg
	* Update documentation urls
	* Replace char* with const char* in conf_parser.yxx

2018-10-27  jasonjyu <jason.j.yu@gmail.com>

	* Check for NULL

2018-10-07  José Jorge <josejorge@gmail.com>

	* Replace char* with const char* to fix write string warnings, fixes #34

2018-10-06  Johnny A. Solbu <johnny@solbu.net>

	* hlfuzzy/Fuzzy.cc: mark strings for translations

2018-09-27  Johnny A. Solbu <johnny@solbu.net>

	* Patches from NevemTeve: Fix bison/yacc/flex compile error
	* Regenerate conf_parser.cxx and conf_lexer.cxx
	* Bump version: 0.4.0

2018-09-08  Johnny A. Solbu <johnny@solbu.net>

	* Don't pull external scripts. Serve it from our own server.
	  This also disables any tracking from the CDN provider.

2018-09-07  Johnny A. Solbu <johnny@solbu.net>

	* All tools should now be renamed

2018-09-03  Johnny A. Solbu <johnny@solbu.net>

	* Rename htfuzzy as hlfuzzy
	* Fix compile error on gcc 7, 8, and clang 6
	* Fix various compile warnings
	* Bump version: 0.3.0

2018-08-26  Johnny A. Solbu <johnny@solbu.net>

	* Release version 0.2.0
	* Image files doesn't need execute permission
	* Update TESTING.md with current build requirements
	* Remove non-existant benchmark folder from dist target:
	  git doesn't track empty folders
	* Some Makefile.am fixes


2018-04-04  Johnny A. Solbu <johnny@solbu.net>

	* Remove broken build test link
	* rename ht -> hl in topdir files
	* Complete rename in installdir
	* Autoreconf