@@ -1,61 +1,0 @@
-language: cpp
-
-sudo: required
-
-matrix:
-  include:
-    - os: linux
-      compiler: gcc
-      env: Tr_Compiler_Version="default"
-    - os: linux
-      compiler: gcc
-      env: Tr_Compiler_Version="5"
-    - os: linux
-      compiler: gcc
-      env: Tr_Compiler_Version="6"
-    - os: linux
-      compiler: gcc
-      env: Tr_Compiler_Version="7"
-    - os: linux
-      compiler: gcc
-      env: Tr_Compiler_Version="8"
-    - os: linux
-# clang
-      compiler: clang
-      env: Tr_Compiler_Version="default"
-    - os: linux
-      compiler: clang
-      env: Tr_Compiler_Version="6.0"
-# osx
-    - os: osx
-      osx_image: xcode9.2
-    - os: osx
-      osx_image: xcode9.3beta
-
-before_install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then ./.travis-before_install.sh "$CC" "$Tr_Compiler_Version"; fi
-  - if [ "$Tr_Compiler_Version" != "" ] && [ "$Tr_Compiler_Version" != "default" ] && [ "$CC" = "gcc" ]; then export CXX="g++-${Tr_Compiler_Version}" CC="gcc-${Tr_Compiler_Version}"; fi
-  - if [ "$Tr_Compiler_Version" != "" ] && [ "$Tr_Compiler_Version" != "default" ] && [ "$CC" == "clang" ]; then export CXX="clang++-${Tr_Compiler_Version}" CC="clang-${Tr_Compiler_Version}"; fi
-  - $CC --version
-  - $CXX --version
-
-script:
-  - cd docs/src
-  - ./configure
-  - make
-  - cd ../..
-  - ./configure --prefix=$PWD/tempbuild --with-zlib
-  - make
-  - make install
-
-notifications:
-    irc:
-      channels:
-        - "chat.freenode.net#hldig"
-      skip_join: false
-      use_notice: false
-      on_success: change
-      on_failure: change
-      on_error: always
-      template:
-        - "[%{repository_name}#%{branch}@%{commit}] Authored by %{author} | Result: %{message} %{build_url}"
