@@ -54,13 +54,6 @@ of your choice to [AUTHORS.md][authors].
 for adding files and entering commit messages (git-cola is probably
 available from your OS repository).
 
-If you're working on documentation or something else that doesn't require compilation, add
-
-    [skip ci]
-
-to the commit message. That way, the [Travis code integration test]
-(https://travis-ci.org/solbu/hldig) will be skipped.
-
 9. Push the working branch (e.g. issue_32) to your remote fork and make
 your [pull request][PR].
     * Do not merge it with the master branch on your fork. That would
